tests/unit/snapshots/unit_test__agent_policy_snapshot__agent_r015_literal_dispatch_chain.snap
---
source: tests/unit/agent_policy_snapshot.rs
assertion_line: 190
expression: rendered
---
[AGENT-R015] Info: Public function hides algorithm behind nested control flow
@ $TEMP/src/api.rs:3:1
fix: make this public algorithm shape explicit
line: 3 | pub fn route(kind: &str) -> usize {
Help: $TEMP/src/api.rs public function `route` hides algorithm shape. Criteria: software-criterion/control-flow.literal-dispatch-chain.
Contract: Expose public Rust algorithm shape through guard clauses, `match`, typed dispatch, or small named pipeline steps so agents can reason about the branch structure before editing.
