tests/unit/snapshots/unit_test__agent_policy_snapshot__agent_r016_broad_linear_algorithm.snap
---
source: tests/unit/agent_policy_snapshot.rs
expression: rendered
---
[AGENT-R016] Info: Public function owns a broad linear algorithm surface
@ $TEMP/src/api.rs:3:1
fix: split this broad function into named algorithm steps
line: 3 | pub fn summarize(value: usize) -> usize {
Help: $TEMP/src/api.rs public function `summarize` spans 19 lines with 16 statements and a 16-statement block. Signals: control-flow.broad-linear-phase.
Contract: Split broad public Rust functions into small named helpers or pipeline steps so agents can edit one algorithm responsibility at a time.
