tests/unit/snapshots/unit_test__agent_policy_snapshot__agent_r020_public_data_shape.snap
---
source: tests/unit/agent_policy_snapshot.rs
expression: rendered
---
[AGENT-R020] Info: Public data struct exposes primitive semantic fields
   ,-[ $TEMP/src/api.rs:3:1 ]
 3 | pub struct UserProfile {
   | `- wrap these fields in named domain types or make the raw DTO boundary explicit
   |Help: $TEMP/src/api.rs exposes public data struct `UserProfile` with primitive semantic fields: user_id: String, session_token: String, timeout_ms: u64, include_inactive: bool.
   |Contract: Wrap repeated public semantic primitive fields in named domain types so agents preserve data invariants instead of extending stringly typed state.
