tests/unit/snapshots/unit_test__agent_policy_snapshot__agent_r021_public_enum_payload_shape.snap
---
source: tests/unit/agent_policy_snapshot.rs
expression: rendered
---
[AGENT-R021] Info: Public enum variant exposes primitive semantic payload fields
@ $TEMP/src/api.rs:5:1
fix: wrap this variant payload in named domain types or move it into a named payload struct
line: 5 | 	UserLoaded { user_id: String, request_id: String, include_inactive: bool },
Help: $TEMP/src/api.rs exposes public enum `DomainEvent` variant `UserLoaded` with primitive semantic payload fields: user_id: String, request_id: String, include_inactive: bool.
Contract: Move broad public enum variant payloads into named domain types or a named payload struct so agents preserve event and command invariants instead of extending raw primitive state.
